# QBrakeCooling

./: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  globals.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
database/: database.db
images/: images.qrc
libBrakeCooling/: CMakeLists.txt
libBrakeCooling/include/: libBrakeCooling.h
libBrakeCooling/src/: libBrakeCooling.cpp
